--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     disc;
 }
 
-#copy-btn {
+#copy-btn, #confirm-btn {
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
@@ -56,7 +56,7 @@ body {
     cursor: pointer;
 }
 
-#copy-btn:hover {
+#copy-btn:hover, #confirm-btn:hover {
     background: #0056b3;
 }
 
